Fix cut sections
It was caused by the max-height. Works now, but does not look
that good ...

--- a/report/src/app/section/section.component.scss
+++ b/report/src/app/section/section.component.scss
@@ -3,7 +3,7 @@
         max-height 0.3s ease,
         opacity 0.3s ease;
     overflow: hidden;
-    max-height: 10000px;
+    max-height: unset;
     opacity: 1;
 
     &.collapsed {
